[package]
name = "saturn_notebook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.10.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
uuid = {version = "1.4.1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
chrono = "0.4"
hmac = "0.12"
sha2 = "0.10"
